tests/architecture/fixtures/invalid/order-command-boundaries/ui-concrete-repository.ts
import { LocalOrderCommandRepository } from "../../../../../packages/sdk/src/commerce/orders/LocalOrderCommandRepository";

export function useInvalidConcreteRepository() {
  return LocalOrderCommandRepository;
}
